--- a/index.html
+++ b/index.html
@@ -1,15 +1,16 @@
 <!doctype html>
 <html lang="en">
-
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Word Gravity</title>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="/style.css">
+    <title>Word Gravity</title>
 </head>
 
 <body>
-  <canvas id="game"></canvas>
-  <script type="module" src="/src/main.ts"></script>
+    <div id="app">
+        <div id="pixi-container"></div>
+    </div>
+    <script type="module" src="/src/main.ts"></script>
 </body>
-
 </html>
